--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<style>
+<style type="text/css">
 body { background-color:white; }
 .box {       
         background-color:white;
@@ -14,15 +14,8 @@ body { background-color:white; }
 </style>
 </head>
 <body>
-body { background-color:white; }
-.box {       
-        background-color:white;
-        color:black;
-        font-family:monospace;
-        font-weight:bold;
-        margin:120px auto;
-        height:150px;        
-        width: 200px;
-    }
+<div class=box>
+Uppper Decker Labs
+ </div>
 </body>
 </html>
