added link to github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body { background-color:white; }
 </head>
 <body>
 <div class=box>
-Uppper Decker Labs
+Upper Decker Labs &#8594; <a href="https://github.com/UpperDeckerLabs">[github]</a>
  </div>
 </body>
 </html>
