--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body { background-color:white; }
         font-weight:bold;
         margin:120px auto;
         height:150px;        
-        width: 200px;
+        width: 18em;
     }
 </style>
 </head>
